@@ -1,3 +1,7 @@
+2007-08-11  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c: further work on the dialog.
+
 2007-08-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/vectors/gimpstroke-new.[ch]: formatting.
